test_dir/logs_backup/make/00.3/fopen_make_2016-12-01-17:03:26.txt
--------------------------------------------------------------------------------------------
seed: 6932
gcc -c shared.c
seed: 6932
seed: 6932
gcc -o blaster blaster.c shared.o
seed: 6932
seed: 6932
seed: 6932
seed: 6932
gcc -o blastee blastee.c shared.o
seed: 6932
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 6932
seed: 6932
seed: 6932
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 29734
make: Makefile: Invalid argument
make: *** No targets.  Stop.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 9756
gcc -c shared.c
seed: 9756
seed: 9756
gcc -o blaster blaster.c shared.o
seed: 9756
seed: 9756
seed: 9756
seed: 9756
gcc -o blastee blastee.c shared.o
seed: 9756
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 9756
seed: 9756
seed: 9756
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 14043
gcc -c shared.c
seed: 14043
seed: 14043
gcc -o blaster blaster.c shared.o
seed: 14043
seed: 14043
seed: 14043
seed: 14043
gcc -o blastee blastee.c shared.o
seed: 14043
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 14043
seed: 14043
seed: 14043
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 3015
make: Makefile: Invalid argument
make: *** No targets.  Stop.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 14201
gcc -c shared.c
seed: 14201
seed: 14201
gcc -o blaster blaster.c shared.o
seed: 14201
seed: 14201
seed: 14201
seed: 14201
gcc -o blastee blastee.c shared.o
seed: 14201
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 14201
seed: 14201
seed: 14201
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 6064
gcc -c shared.c
seed: 6064
seed: 6064
gcc -o blaster blaster.c shared.o
seed: 6064
seed: 6064
seed: 6064
seed: 6064
gcc -o blastee blastee.c shared.o
seed: 6064
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 6064
seed: 6064
seed: 6064
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 23739
make: Makefile: Invalid argument
make: *** No targets.  Stop.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 2867
gcc -c shared.c
seed: 2867
seed: 2867
gcc -o blaster blaster.c shared.o
seed: 2867
seed: 2867
seed: 2867
seed: 2867collect2: error: ld returned 1 exit status

make: *** [blaster] Error 1
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 25583
gcc -c shared.c
seed: 25583
seed: 25583
gcc -o blaster blaster.c shared.o
seed: 25583
seed: 25583
seed: 25583
seed: 25583collect2: error: ld returned 1 exit status

make: *** [blaster] Error 1
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 30819
gcc -c shared.c
seed: 30819
seed: 30819
gcc -o blaster blaster.c shared.o
seed: 30819
seed: 30819
seed: 30819
seed: 30819
gcc -o blastee blastee.c shared.o
seed: 30819
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 30819
seed: 30819
seed: 30819
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 18025
gcc -c shared.c
seed: 18025
seed: 18025
gcc -o blaster blaster.c shared.o
seed: 18025
seed: 18025
seed: 18025
seed: 18025collect2: error: ld returned 1 exit status

make: *** [blaster] Error 1
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 20489
gcc -c shared.c
seed: 20489
seed: 20489
gcc -o blaster blaster.c shared.o
seed: 20489
seed: 20489
seed: 20489
seed: 20489
gcc -o blastee blastee.c shared.o
seed: 20489
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 20489
seed: 20489
seed: 20489
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 6958
make: Makefile: Invalid argument
make: *** No targets.  Stop.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 7896
gcc -c shared.c
seed: 7896
seed: 7896
gcc -o blaster blaster.c shared.o
seed: 7896
seed: 7896
seed: 7896
seed: 7896collect2: error: ld returned 1 exit status

make: *** [blaster] Error 1
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 13527
make: Makefile: Invalid argument
make: *** No targets.  Stop.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 9943
gcc -c shared.c
seed: 9943
seed: 9943
gcc -o blaster blaster.c shared.o
seed: 9943
seed: 9943
seed: 9943
seed: 9943collect2: error: ld returned 1 exit status

make: *** [blaster] Error 1
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 685
gcc -c shared.c
seed: 685
seed: 685
gcc -o blaster blaster.c shared.o
seed: 685
seed: 685
seed: 685
seed: 685
gcc -o blastee blastee.c shared.o
seed: 685
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 685
seed: 685
seed: 685
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 17220
gcc -c shared.c
seed: 17220
seed: 17220
gcc -o blaster blaster.c shared.o
seed: 17220
seed: 17220
seed: 17220
seed: 17220
gcc -o blastee blastee.c shared.o
seed: 17220
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 17220
seed: 17220
seed: 17220
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 19694
gcc -c shared.c
seed: 19694
seed: 19694
gcc -o blaster blaster.c shared.o
seed: 19694
seed: 19694
seed: 19694
seed: 19694collect2: error: ld returned 1 exit status

make: *** [blaster] Error 1
--------------------------------------------------------------------------------------------
